--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -9,6 +9,7 @@ publish = true
 
 [dependencies]
 anyhow = { version = "1.0.75" }
+bitcoin_hashes = { version = "0.11.0", default-features = false }
 blake3 = "1.3.2"
 byte = "0.2"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default"] }
