--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -57,7 +57,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 [build-dependencies]
 cbindgen = "0.24.3"
 #ferment-sys = { path = "../../ferment/ferment-sys", features = ["objc"] }
-ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys", features = ["objc"] }
+#ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys", features = ["objc"] }
 
 
 [lib]
