--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -48,6 +48,7 @@ rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpa
 rs-x11-hash = "0.1.8"
 dashcore-rpc = { git = "https://github.com/dashpay/rust-dashcore-rpc", tag = "v0.15.2" }
 serde_json = { version = "1.0", features = ["preserve_order"] }
+thiserror = { version = "1.0.64" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
 
