--- a/logging/Cargo.toml
+++ b/logging/Cargo.toml
@@ -10,7 +10,7 @@ license.workspace = true
 keywords.workspace = true
 
 [dependencies]
-tracing = "0.1.40"
+tracing = { version = "0.1.40", features = ["max_level_debug"] } #"release_max_level_warn"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 dirs = "4.0"
 dirs-next = "2.0.0"  # Optional, for dynamic log file paths
