--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -37,8 +37,8 @@ rs-dapi-client = { git = "https://github.com/pankcuf/platform", branch = "test/f
 #platform-version = { path = "../../platform/packages/rs-platform-version" }
 #rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
 fancy-regex = "0.13.0"
-ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
-ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
+ferment = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment" }
+ferment-macro = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment-macro" }
 #ferment = { path = "../../ferment/ferment" }
 #ferment-macro = { path = "../../ferment/ferment-macro" }
 grovedb-version = "2.1.0"
@@ -53,7 +53,7 @@ serde_json = { version = "1.0", features = ["preserve_order"] }
 thiserror = { version = "1.0.64" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
-
+#
 [dev-dependencies]
 libc = "0.2.146"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
@@ -62,7 +62,9 @@ serde = { version = "1.0.209", features = ["derive"] }
 
 [build-dependencies]
 cbindgen = "0.27.0"
-ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys", features = ["objc"] }
+#ferment-sys = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment-sys", features = ["cbindgen_only"] }
+ferment-sys = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment-sys" }
+#ferment-sys = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment-sys", features = ["objc"] }
 #ferment-sys = { path = "../../ferment/ferment-sys", features = ["objc"] }
 
 [features]
@@ -88,6 +90,7 @@ message-signing = ["dpp/message-signing"]
 mocks = ["dash-sdk/mocks"]
 mock-versions = ["platform-version/mock-versions"]
 objc = ["ferment-sys/objc"]
+cbindgen_only = ["ferment-sys/cbindgen_only"]
 platform-value = ["dpp/platform-value"]
 #serde = ["dash-spv-masternode-processor/serde"]
 state-transitions = ["dpp/state-transitions"]
@@ -97,7 +100,7 @@ state-transition-signing = ["dpp/state-transition-signing"]
 std = ["platform-value/std"]
 system_contracts = ["dpp/system_contracts"]
 test-helpers = ["dash-spv-masternode-processor/test-helpers"]
-use_serde = ["serde", "dash-spv-masternode-processor/use_serde"]
+use_serde = ["serde", "dash-spv-masternode-processor/use_serde", "dash-spv-crypto/use_serde"]
 validation = ["dpp/validation"]
 
 [lib]
